--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate": "node -r dotenv/config node_modules/.bin/node-pg-migrate"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,9 @@
     "@upstash/redis": "^1.36.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-pg-migrate": "^8.0.4",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
